--- a/app/app.component.html
+++ b/app/app.component.html
@@ -1,10 +1,14 @@
 <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
         <div class="navbar-header">
-            <div class="navbar-brand">Notes tutorial app</div>
+            <div class="navbar-brand" routerLink="/" style="cursor:hand">
+                Notes tutorial app
+            </div>
         </div>
         <div class="navbar-form navbar-right">
-            <a class="btn btn-primary" routerLink="/register">Register</a>
+            <login-form>
+                <a class="btn btn-primary" routerLink="/register">Register</a>
+            </login-form>
         </div>
     </div>
 </nav>
@@ -22,6 +26,3 @@
 </div>
 
 <router-outlet></router-outlet>
-
-<!--
-<a routerLink="wrongaddress">wrong address</a>-->
